# projects

./: .gitignore  .gitmodules  README.md
atomistic-lab/rmt_dynamics_paper/: experiments.md  main.tex
atomistic-lab/rmt_dynamics_paper/code/: README.md  pyproject.toml
atomistic-lab/rmt_dynamics_paper/code/experiments/: _common.py  submit_all.sh
atomistic-lab/rmt_dynamics_paper/code/experiments/01_noise_convergence/: README.md  analysis.py  config.yaml  run.py  submit_chain.sh
atomistic-lab/rmt_dynamics_paper/code/experiments/02_bond_addition/: README.md  analysis.py  config.yaml  run.py  topology.py
atomistic-lab/rmt_dynamics_paper/code/experiments/03_lj_phases/: README.md  analysis.py  config.yaml  run.py  submit_chain.sh
atomistic-lab/rmt_dynamics_paper/code/experiments/04_water_phases/: README.md  analysis.py  config.yaml  run.py  topology.py
atomistic-lab/rmt_dynamics_paper/code/experiments/05_molten_salt/: README.md  analysis.py  config.yaml  run.py  topology.py
atomistic-lab/rmt_dynamics_paper/code/lammps_templates/: ideal_gas.in.j2  lj_nvt.in.j2  molten_salt_nacl.in.j2  water_tip4p2005.in.j2
atomistic-lab/rmt_dynamics_paper/code/rmt_dynamics/: __init__.py  cli.py  correlation.py  hbond.py  io.py  peaks.py  plotting.py  rmt_null.py  spectrum.py  transport.py
atomistic-lab/rmt_dynamics_paper/code/tests/: conftest.py  test_correlation.py  test_hbond.py  test_io.py  test_peaks.py  test_rmt_null.py  test_spectrum.py  test_transport.py
microrobotics-lab/capillary-navigation/: run_capillary.py
microrobotics-lab/embedding-representation/: Untitled.ipynb  analysis.ipynb  angular-velocity-calculation.ipynb  build-histogram.ipynb  deployment.py  embedding-deployment.ipynb  embedding-study.ipynb  embedding-study.py  makefile  recursive-submit.sh  reference.ipynb  reward_plot.py  rod-analysis.ipynb  rotation-training.py  rotation_task.py  setup.sh  submit.sh  vis.py
microrobotics-lab/emergent-chemotaxis/: analysis.ipynb
microrobotics-lab/emergent-swarm-formation/: predator-prey-deploy.ipynb  predator-prey-deploy.py  predator-prey-rl.ipynb  predator-prey-rl.py  vis.py
nanopore-lab/: dataset_stats.py  event_figures.ipynb  histogram-plotting.ipynb
quantum-lab/ballistic-diamond/classical-simulations/analysis/: README.md  analyze-sweep.ipynb  damage_ingest.py  example_analysis.py  ingest.py  pyproject.toml  visualize_final.py
quantum-lab/ballistic-diamond/classical-simulations/analysis/ballistic_analysis/: __init__.py  aggregate.py  damage.py  reader.py  viz.py
quantum-lab/ballistic-diamond/visualizations/: pyproject.toml  tai.py
(+1109 files in other folders)
